--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@
 /*/*/constant/polyMesh/
 /*/*/[1-9]*
 /*/*/*.[1-9]*
+/*/*/log.pisoFoam
 
 # ignore deepth 3
 /*/*/*/.#*
@@ -56,4 +57,3 @@
 /*/*/*/constant/polyMesh/
 /*/*/*/[1-9]*
 /*/*/*/*.[1-9]*
-log.pisoFoam
